<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/setGoalTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="Setup Your Goals!"
            android:textSize="36dp"
            android:textAlignment="center"/>

        <EditText
            android:id="@+id/dailyGoalInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/day_goal"
            android:inputType="number"
            android:imeOptions="actionSend"></EditText>

        <EditText
            android:id="@+id/weeklyGoalInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/weekly_goal"
            android:inputType="number"
            android:imeOptions="actionSend"></EditText>

        <EditText
            android:id="@+id/monthlyGoalInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/monthly_goal"
            android:inputType="number"
            android:imeOptions="actionSend"></EditText>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>