<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.report.DailyFragment">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_month"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/daily_title"
            android:textAlignment="center"
            android:textSize="25sp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/stepsGoal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/goal"
                android:textAlignment="center"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="168dp"
                tools:layout_editor_absoluteY="78dp" />

            <TextView
                android:id="@+id/stepsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="182dp"
                tools:layout_editor_absoluteY="148dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/steps"
                android:textAlignment="center"
                android:textSize="15sp"
                tools:layout_editor_absoluteX="191dp"
                tools:layout_editor_absoluteY="256dp" />

        </LinearLayout>


        <com.anychart.AnyChartView
            android:id="@+id/hourBarChart"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_marginTop="30dp" />


    </LinearLayout>

    <ProgressBar
        android:id="@+id/loadingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <ProgressBar
        android:id="@+id/dailyProgressBar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:layout_gravity="center"
        android:progressDrawable="@drawable/smaller_circle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>