<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.262">

        <TextView
            android:id="@+id/stepsGoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goal"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="168dp"
            tools:layout_editor_absoluteY="228dp" />

        <TextView
            android:id="@+id/stepsCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_0"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="65sp"
            tools:layout_editor_absoluteX="182dp"
            tools:layout_editor_absoluteY="298dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/steps"
            android:textAlignment="center"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="191dp"
            tools:layout_editor_absoluteY="406dp" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/dayString"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day_string"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"></TextView>

                <ProgressBar
                    android:id="@+id/dailyProgressBar"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="175dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:thickness="50dp"></ProgressBar>

                <ImageView
                    android:id="@+id/dailySmiley"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:background="@drawable/happy"
                    android:backgroundTint="@color/colorAccent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/weekString"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/week_string"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"></TextView>

                <ProgressBar
                    android:id="@+id/weeklyProgressBar"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="175dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"></ProgressBar>

                <ImageView
                    android:id="@+id/weeklySmiley"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:background="@drawable/happy"
                    android:backgroundTint="@color/colorAccent" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:id="@+id/monthString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/month_string"
                    android:textAlignment="textEnd"
                    android:textSize="20sp"></TextView>

                <ProgressBar
                    android:id="@+id/monthlyProgressBar"
                    style="?android:progressBarStyleHorizontal"
                    android:layout_width="175dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"></ProgressBar>

                <ImageView
                    android:id="@+id/monthlySmiley"
                    android:layout_width="match_parent"
                    android:layout_height="26dp"
                    android:layout_gravity="center"
                    android:background="@drawable/happy"
                    android:backgroundTint="@color/colorAccent" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/activate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/activate"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="10sp"></TextView>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:checked="true"
            android:gravity="center_horizontal"
            android:switchMinWidth="70dp" />


    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="417dp"
        android:layout_height="333dp"
        android:layout_gravity="center"
        android:progress="50"
        android:progressDrawable="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>

